changed structure and styles for using other buttons and prevent weird overflow

--- a/style.css
+++ b/style.css
@@ -18,13 +18,14 @@ body{
  */
 .preview{
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
     
     height: 150px;
     padding: 0 10px;
-
+    
     color: #dddddd;
 }
 .previousResults{
@@ -42,9 +43,13 @@ body{
     font-weight: bold;
     text-align: right;
     color: #dddddd;
+    float: right;
+    caret-color: transparent;
+    box-sizing:border-box;
+    
     
     margin: 0;
-    max-width: 100%;
+    width: fit-content;
     background-color: transparent;
     border: none;
     outline: none;
